--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Animation Style"/>
+            <Button
+                android:id="@+id/picassoLibrary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Picasso Library"/>
+            <Button
+                android:id="@+id/lottieAnimationPage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lottie Animation"/>
 
         </LinearLayout>
     </ScrollView>
