--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Lottie Animation"/>
+            <Button
+                android:id="@+id/userInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="User Input Page"/>
+            <Button
+                android:id="@+id/calculationOnShop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Calculation on Shop"/>
+            <Button
+                android:id="@+id/BmiCalculatorPage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BMI calculator"/>
 
         </LinearLayout>
     </ScrollView>
